Completed (?) completeness and nearly (?) self

--- a/text/computability/completeness/completeness.tex
+++ b/text/computability/completeness/completeness.tex
@@ -600,7 +600,11 @@ therefore the loop will start again and nothing new will come of it.
 Another hint is that there is no obvious way to deduce certain properties 
 without running the whole machine -- ``Is this cell alive after $n$ turns" 
 can only be anwered after running $n$ turns.
-\TODO
+
+The real test is of course to implement a turing machine in the game of life, 
+but this is beyond the scope of this 
+text\footnote{\url{http://rendell-attic.org/gol/tm.htm} has an 
+implementation of a turing machine in the Game of Life}.
 
 \paragraph{Why are most programming languages Turing Complete?} % (fold)
 \label{sub:Why are most programming languages Turing Complete?}
