--- a/text/computability/self/self.tex
+++ b/text/computability/self/self.tex
@@ -17,6 +17,11 @@ computation, \FOR, are not self interpreting.
 	Every procedure of $\WHILE$ might as well use its own source code.
 \end{theorem}
 \begin{proof}
+	\TODO \lineofthought{I have yet to find a convincing and understandable 
+	proof, Jones "proves" it on p233, but that looks very circular to me. He 
+	argues from an implementation standpoint, but that's not the interesting
+	part!}
+
 	Instead of giving $Y$ and explaining how it works, here is how one could 
 	figure out how to do it:
 
