--- a/text/main.tex
+++ b/text/main.tex
@@ -31,13 +31,14 @@
 \newcommand*{\N}{\ensuremath{\mathbf{N}}\xspace}
 
 % Note Commands
-\newcommand{\timeestimation}[1]{ \footnote{#1} }
+\newcommand{\timeestimation}[1]{\footnote{#1} }
 \newcommand{\citationneeded}{{\em (citation needed) } }
 \newcommand{\lineofthought}[1]{{\bf [#1] }}
 \newcommand{\TODO}{\ensuremath{\left<\mathbf{TODO}\right> }}
 \newcommand{\lepower}{\leq}
 \newcommand{\gepower}{\geq}
 \newcommand{\epower}{\equiv}
+\newcommand{\abs}[1]{\left|#1\right|}
 
 % Disabled Note Commands
 %\newcommand{\timeestimation}[1]{}
@@ -85,6 +86,7 @@
 
 \chapter{Complexity}
 	\include*{complexity/complexity/complexity}
+	\include*{complexity/hierarchy/hierarchy}
 	\include*{complexity/robustness/robustness}
 	\include*{complexity/langcomplexity/langcomplexity}
 
