Lunch time! complexity now uses TM for space
space complexity is a horrible mess to define in WHILE, so the usual
approach is to use TM, COUNTER or RAM and define for and other language
with a language isomorphism, thus lifting the size into the language.

--- a/text/biblio.bib
+++ b/text/biblio.bib
@@ -78,3 +78,10 @@
   year={1996},
   organization={ACM}
 }
+@book{girard1989proofs,
+  title={Proofs and types},
+  author={Girard, J.Y. and Taylor, P. and Lafont, Y.},
+  volume={7},
+  year={1989},
+  publisher={Cambridge University Press Cambridge}
+}
